// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with errors 1`] = `
<fieldset
  className="MuiFormControl-root-1"
  id="abc-fieldset"
>
  <div>
    <div
      autoFocus={undefined}
      component={[Function]}
      disabled={undefined}
      error={true}
      id="abc"
      inputComponent={undefined}
      inputProps={Object {}}
      name="abc"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      placeholder={undefined}
      type={undefined}
      value={undefined}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-19 MuiFormHelperText-error-20"
    >
      Y
    </p>
  </div>
  <div>
    <label
      className="MuiFormLabel-root-12 MuiFormLabel-error-15 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor="abc"
    />
    <div
      autoFocus={undefined}
      component={[Function]}
      error={true}
      id="abc"
      inputComponent={undefined}
      inputProps={Object {}}
      name="abc"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      placeholder={undefined}
      type={undefined}
      value={undefined}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-19 MuiFormHelperText-error-20"
    >
      Y
    </p>
  </div>
</fieldset>
`;

exports[`renders correctly without errors 1`] = `
<fieldset
  className="MuiFormControl-root-1"
  id="undefined-fieldset"
>
  <div>
    <div
      autoFocus={undefined}
      component={[Function]}
      disabled={undefined}
      error={false}
      id={undefined}
      inputComponent={undefined}
      inputProps={Object {}}
      name={undefined}
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      placeholder={undefined}
      type={undefined}
      value={undefined}
    >
      Field
    </div>
  </div>
  <div>
    <label
      className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor={undefined}
    />
    <div
      autoFocus={undefined}
      component={[Function]}
      error={false}
      id={undefined}
      inputComponent={undefined}
      inputProps={Object {}}
      name={undefined}
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      placeholder={undefined}
      type={undefined}
      value={undefined}
    >
      Field
    </div>
    <p
      className="MuiFormHelperText-root-19"
    />
  </div>
</fieldset>
`;
